activate user --in progress
